--- a/k8s/configmap/env-influxdb-configmap.yaml
+++ b/k8s/configmap/env-influxdb-configmap.yaml
@@ -6,10 +6,10 @@ data:
   DOCKER_INFLUXDB_INIT_ORG: my-org
   DOCKER_INFLUXDB_INIT_PASSWORD: P@ssw0rd123
   DOCKER_INFLUXDB_INIT_USERNAME: admin
-  INFLUXDB_CONTAINER_HOST: influxdb
-  INFLUXDB_CONTAINER_PORT: 8086
-  INFLUXDB_CONTAINER_USER: root
-  INFLUXDB_CONTAINER_PASSWORD: root123
+  # INFLUXDB_CONTAINER_HOST: influxdb
+  # INFLUXDB_CONTAINER_PORT: 8086
+  # INFLUXDB_CONTAINER_USER: root
+  # INFLUXDB_CONTAINER_PASSWORD: root123
 kind: ConfigMap
 metadata:
   name: env-influxdb
