--- a/k8s/deployments/disk_usage_cronjob-deployment.yaml
+++ b/k8s/deployments/disk_usage_cronjob-deployment.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: disk_usage_cronjob-deployment
+  name: disk-usage-cronjob-deployment
   namespace: app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: disk_usage_cronjob
+      app: disk-usage-cronjob
   template:
     metadata:
       labels:
-        app: disk_usage_cronjob
+        app: disk-usage-cronjob
     spec:
       containers:
         - image: muhadel/disk_usage_cronjob
