--- a/k8s/deployments/cronjob-deployment.yaml
+++ b/k8s/deployments/cronjob-deployment.yaml
@@ -14,7 +14,7 @@ spec:
         app: disk-usage-cronjob
     spec:
       containers:
-        - image: muhadel/disk_usage_cronjob
+        - image: python:3.8-slim-buster
           name: disk-usage-cronjob
           stdin: true
           tty: true
@@ -23,56 +23,4 @@ spec:
           # - -c
           # - "/wait-for-it.sh $${INFLUXDB_CONTAINER_HOST}:$${INFLUXDB_CONTAINER_PORT} --strict -- sshpass -p $${INFLUXDB_CONTAINER_PASSWORD} ssh-copy-id -i /root/.ssh/id_rsa.pub -o StrictHostKeyChecking=no $${INFLUXDB_CONTAINER_USER}@$${INFLUXDB_CONTAINER_HOST} &&
           #   python main.py"
-          env:
-            - name: INFLUXDB_URL
-              valueFrom:
-                configMapKeyRef:
-                  key: INFLUXDB_URL
-                  name: env-cronjob
-            - name: INFLUXDB_USERNAME
-              valueFrom:
-                configMapKeyRef:
-                  key: INFLUXDB_USERNAME
-                  name: env-cronjob
-            - name: INFLUXDB_PASSWORD
-              valueFrom:
-                configMapKeyRef:
-                  key: INFLUXDB_PASSWORD
-                  name: env-cronjob
-          - name: INFLUXDB_ORG
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_ORG
-                name: env-cronjob
-                # //
-          - name: INFLUXDB_BUCKET
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_BUCKET
-                name: env-cronjob
-          - name: INFLUXDB_ADMIN_TOKEN
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_ADMIN_TOKEN
-                name: env-cronjob
-          - name: INFLUXDB_CONTAINER_HOST
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_CONTAINER_HOST
-                name: env-cronjob
-          - name: INFLUXDB_CONTAINER_PORT
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_CONTAINER_PORT
-                name: env-cronjob
-          - name: INFLUXDB_CONTAINER_USER
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_CONTAINER_USER
-                name: env-cronjob
-          - name: INFLUXDB_CONTAINER_PASSWORD
-            valueFrom:
-              configMapKeyRef:
-                key: INFLUXDB_CONTAINER_PASSWORD
-                name: env-cronjob
       restartPolicy: Always
