--- a/k8s/deployments/influxdb-deployment.yaml
+++ b/k8s/deployments/influxdb-deployment.yaml
@@ -71,4 +71,6 @@ spec:
                 configMapKeyRef:
                   key: INFLUXDB_CONTAINER_PASSWORD
                   name: env-influxdb
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       restartPolicy: Always
