--- a/k8s/configmap/env-cronjob-configmap.yaml
+++ b/k8s/configmap/env-cronjob-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  INFLUXDB_URL: "http://influxdb:8086"
+  INFLUXDB_URL: "http://{{INFLUXDB_POD_IP}}:8086"
   INFLUXDB_USERNAME: admin
   INFLUXDB_PASSWORD: P@ssw0rd123
   INFLUXDB_ORG: my-org
