--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -13,16 +13,15 @@ spec:
   rules:
     - http:
         paths:
-          # - pathType: Prefix
-          #   backend:
-          #     service:
-          #       name: grafana-service
-          #       port:
-          #         number: 3000
-          #   path: /
-
           - pathType: Prefix
             path: /
+            backend:
+              service:
+                name: grafana-service
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /grafana
             backend:
               service:
                 name: influxdb-service
