--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -13,15 +13,15 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
+          - pathType: ImplementationSpecific
             path: /
             backend:
               service:
                 name: grafana-service
                 port:
                   number: 3000
-          - pathType: Prefix
-            path: /grafana
+          - pathType: ImplementationSpecific
+            path: /influxdb
             backend:
               service:
                 name: influxdb-service
