--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -14,7 +14,7 @@ spec:
     - http:
         paths:
           - pathType: ImplementationSpecific
-            path: /
+            path: "/?(.*)"
             backend:
               service:
                 name: grafana-service
