--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -14,14 +14,14 @@ spec:
     - http:
         paths:
           - pathType: ImplementationSpecific
-            path: "/?(.*)"
+            path: /
             backend:
               service:
                 name: grafana-service
                 port:
                   number: 3000
           - pathType: ImplementationSpecific
-            path: /influxdb
+            path: "/influxdb/?(.*)"
             backend:
               service:
                 name: influxdb-service
