--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -13,8 +13,8 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
-            path: /(grafana|public)(/|$)(.*)
+          - pathType: ImplementationSpecific
+            path: /grafana(/|$)(.*)
             backend:
               service:
                 name: grafana-service
