--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: app
   annotations:
     # kubernetes.io/ingress.class: "nginx"
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
@@ -13,19 +13,19 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: ImplementationSpecific
-            path: /
-            backend:
-              service:
-                name: grafana-service
-                port:
-                  number: 3000
           # - pathType: ImplementationSpecific
-          #   path: /influxdb(/|$)(.*)
+          #   path: /grafana(/|$)(.*)
           #   backend:
           #     service:
-          #       name: influxdb-service
+          #       name: grafana-service
           #       port:
-          #         number: 8086
+          #         number: 3000
+          - pathType: ImplementationSpecific
+            path: /influxdb(/|$)(.*)
+            backend:
+              service:
+                name: influxdb-service
+                port:
+                  number: 8086
 
   ingressClassName: nginx
