--- a/k8s/ingress/ingress-2.yaml
+++ b/k8s/ingress/ingress-2.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     # kubernetes.io/ingress.class: "nginx"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/app-root:
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
     name: ingress-service
@@ -13,8 +14,8 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: ImplementationSpecific
-            path: /
+          - pathType: Prefix
+            path: /?(.*)
             backend:
               service:
                 name: grafana-service
