--- a/k8s/ingress/ingress-2.yaml
+++ b/k8s/ingress/ingress-2.yaml
@@ -15,7 +15,7 @@ spec:
     - http:
         paths:
           - pathType: Prefix
-            path: /?(.*)
+            path: /grafana/?(.*)
             backend:
               service:
                 name: grafana-service
