--- a/k8s/ingress/ingress-2.yaml
+++ b/k8s/ingress/ingress-2.yaml
@@ -14,7 +14,7 @@ spec:
   rules:
     - http:
         paths:
-          - pathType: Prefix
+          - pathType: ImplementationSpecific
             path: /grafana/?(.*)
             backend:
               service:
