--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -13,13 +13,13 @@ spec:
   rules:
     - http:
         paths:
-          # - pathType: ImplementationSpecific
-          #   path: /grafana(/|$)(.*)
-          #   backend:
-          #     service:
-          #       name: grafana-service
-          #       port:
-          #         number: 3000
+          - pathType: ImplementationSpecific
+            path: /grafana(/|$)(.*)
+            backend:
+              service:
+                name: grafana-service
+                port:
+                  number: 3000
           - pathType: ImplementationSpecific
             path: /influxdb(/|$)(.*)
             backend:
