--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -21,7 +21,7 @@ spec:
                 name: grafana-service
                 port:
                   number: 3000
-          - pathType: ImplementationSpecific
+          - pathType: Prefix
             path: /influxdb(/|$)(.*)
             backend:
               service:
