--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: app
   annotations:
     # kubernetes.io/ingress.class: "nginx"
-    # nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/app-root: /app1
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
