--- a/k8s/ingress/ingress-1.yaml
+++ b/k8s/ingress/ingress-1.yaml
@@ -1,15 +1,15 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: ingress-service-1
   namespace: app
   annotations:
     # kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
-    nginx.ingress.kubernetes.io/app-root: /app1
+    # nginx.ingress.kubernetes.io/app-root: /app1
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
-    name: ingress-service
+    name: ingress-service-1
 spec:
   rules:
     - http:
@@ -21,12 +21,12 @@ spec:
                 name: influxdb-service
                 port:
                   number: 8086
-          - pathType: Prefix
-            path: /(.*)
-            backend:
-              service:
-                name: grafana-service
-                port:
-                  number: 3000
+          # - pathType: Prefix
+          #   path: /(.*)
+          #   backend:
+          #     service:
+          #       name: grafana-service
+          #       port:
+          #         number: 3000
 
   ingressClassName: nginx
