--- a/k8s/ingress/ingress-2.yaml
+++ b/k8s/ingress/ingress-2.yaml
@@ -1,21 +1,21 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-service
+  name: ingress-service-2
   namespace: app
   annotations:
     # kubernetes.io/ingress.class: "nginx"
     # nginx.ingress.kubernetes.io/rewrite-target: /$2
-    # nginx.ingress.kubernetes.io/app-root:
+    # nginx.ingress.kubernetes.io/app-root: /app1
     nginx.ingress.kubernetes.io/use-regex: "true"
   labels:
-    name: ingress-service
+    name: ingress-service-2
 spec:
   rules:
     - http:
         paths:
-          - pathType: ImplementationSpecific
-            path: /grafana/?(.*)
+          - pathType: Prefix
+            path: /(.*)
             backend:
               service:
                 name: grafana-service
